--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
   <meta charset="UTF-8">
   <title>دکتر سعید مجتبی‌زاده</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
-  <meta name="description" content="فوق‌دکتری مهندسی عمران-ژئوتکنیک لرزه‌ای">
+  <meta name="description" content="اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران">
   <meta name="keywords" content="دکتر سعید مجتبی‌زاده, Saeed Mojtabazadeh, ژئوتکنیک, پژوهشگر, نوآوری علمی">
   <meta name="author" content="Saeed Mojtabazadeh">
+
   <meta property="og:title" content="دکتر سعید مجتبی‌زاده">
   <meta property="og:description" content="پایگاه دکتر سعید مجتبی‌زاده">
   <meta property="og:image" content="https://bayanbox.ir/view/6333081801587349279/Saeed2.jpg">
   <meta property="og:url" content="http://www.mojtabazadeh.ir/">
   <meta name="twitter:card" content="summary_large_image">
+
   <link rel="icon" type="image/png" sizes="512x512" href="https://github.com/mojtabazadeh/saeedmojtabazadeh.github.io/blob/main/favicon.png?raw=true">
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;600;800&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
@@ -34,17 +36,30 @@
     #particles {position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1}
 
     .profile-container {
-      width:150px;height:150px;
-      margin:25px auto 16px;border-radius:50%;
+      width:150px;
+      height:150px;
+      margin:25px auto 16px;
+      border-radius:50%;
       box-shadow:0 0 25px rgba(255,120,255,0.6),0 0 45px rgba(140,70,255,0.3);
       animation:floatMove 6s ease-in-out infinite;
       background:rgba(255,255,255,0.05);
-      position:relative;overflow:visible;
+      position:relative;
+      overflow:visible;
     }
-    .profile-container svg{width:100%;height:100%;display:block;}
-    @keyframes floatMove{0%,100%{transform:translateY(0)}50%{transform:translateY(-6px)}}
+    .profile-container svg {
+      width:100%;
+      height:100%;
+      display:block;
+    }
+    @keyframes floatMove {
+      0%,100%{transform:translateY(0)}
+      50%{transform:translateY(-6px)}
+    }
 
-    .title-wrapper{max-width:90vw;margin-bottom:20px;animation:fadeInUp 1s ease forwards;opacity:0;transform:translateY(10px)}
+    .title-wrapper {
+      max-width:90vw;margin-bottom:20px;
+      animation:fadeInUp 1s ease forwards;opacity:0;transform:translateY(10px);
+    }
     .title-line {
       font-size:clamp(1.6rem,5vw,2.4rem);
       font-weight:800;
@@ -53,165 +68,147 @@
       text-shadow:0 0 12px rgba(200,150,255,0.6);
       animation:glowPulse 4s ease-in-out infinite;
     }
-    .title-sub{font-size:clamp(1rem,3vw,1.2rem);color:#e0c7ff;font-weight:600;margin-top:4px;text-shadow:0 1px 3px rgba(0,0,0,0.4)}
-
-    .link-bar{display:flex;flex-wrap:wrap;justify-content:center;gap:10px;max-width:95vw;margin-bottom:16px;animation:fadeInUp 1.2s ease forwards;opacity:0;transform:translateY(10px)}
-    .link-bar a {
-      background:rgba(255,255,255,0.1);color:white;
-      padding:8px 14px;border-radius:25px;
-      font-size:clamp(0.8rem,3vw,0.95rem);
-      text-decoration:none;transition:all 0.3s ease;
+    .title-sub {
+      font-size:clamp(1rem,3vw,1.2rem);
+      color:#e0c7ff;
+      font-weight:600;
+      margin-top:4px;
+      text-shadow:0 1px 3px rgba(0,0,0,0.4);
     }
-    .link-bar a:hover{background:rgba(255,255,255,0.25);box-shadow:0 0 12px rgba(180,100,255,0.7);transform:translateY(-2px)}
 
-    .frame-wrapper{width:95%;max-width:900px;aspect-ratio:16/9;border-radius:16px;overflow:hidden;margin-top:10px;background:rgba(0,0,0,0.25);backdrop-filter:blur(4px);animation:fadeInUp 1.4s ease forwards;opacity:0;transform:translateY(10px)}
-    .frame-wrapper iframe{width:100%;height:100%;border:none;display:block;border-radius:16px}
-
-    .footer{font-size:0.8rem;margin-top:18px;opacity:0.7}
-    .footer a{color:white;text-decoration:none}
-
-    .lang-switch,.right-buttons{position:fixed;top:12px;display:flex;gap:6px;z-index:99}
-    .lang-switch{left:12px}.right-buttons{right:12px}
-    .lang-switch button,.right-buttons button {
-      background:rgba(255,255,255,0.15);color:white;border:none;
-      padding:6px 12px;border-radius:50px;cursor:pointer;font-size:0.8rem;
+    .link-bar {
+      display:flex;flex-wrap:wrap;justify-content:center;
+      gap:10px;max-width:95vw;margin-bottom:16px;
+      animation:fadeInUp 1.2s ease forwards;opacity:0;transform:translateY(10px);
+    }
+    .link-bar a {
+      background:rgba(255,255,255,0.1);
+      color:white;
+      padding:8px 14px;
+      border-radius:25px;
+      font-size:clamp(0.8rem,3vw,0.95rem);
+      text-decoration:none;
       transition:all 0.3s ease;
     }
-    .lang-switch button:hover,.right-buttons button:hover{background:rgba(255,255,255,0.3);transform:scale(1.05)}
-
-    .modal {
-      position:fixed;top:0;left:0;width:100%;height:100%;
-      background:rgba(0,0,0,0.5);backdrop-filter:blur(6px);
-      display:flex;align-items:center;justify-content:center;
-      visibility:hidden;opacity:0;transition:opacity 0.3s ease;z-index:999;
+    .link-bar a:hover {
+      background:rgba(255,255,255,0.25);
+      box-shadow:0 0 12px rgba(180,100,255,0.7);
+      transform:translateY(-2px);
     }
-    .modal.show{visibility:visible;opacity:1}
-    .modal-content {
-      background:rgba(255,255,255,0.15);color:white;
-      padding:20px 25px;border-radius:12px;
-      max-width:500px;text-align:justify;
-      box-shadow:0 0 15px rgba(200,150,255,0.6);
-      line-height:1.8;font-size:0.9rem;
-    }
-    .modal-content h3{text-align:center;margin-bottom:10px;font-size:1rem}
-    .close-btn {
-      display:block;margin:10px auto 0;background:rgba(255,255,255,0.2);
-      border:none;color:white;padding:5px 12px;border-radius:8px;
-      cursor:pointer;transition:all 0.3s ease;
-    }
-    .close-btn:hover{background:rgba(255,255,255,0.4)}
 
-    .smooth-switch{animation:smoothFadeSlide 0.9s ease}
-    @keyframes smoothFadeSlide{0%{opacity:1;transform:translateY(0)}40%{opacity:0;transform:translateY(-15px)}60%{opacity:0;transform:translateY(15px)}100%{opacity:1;transform:translateY(0)}}
-    @keyframes fadeInUp{to{opacity:1;transform:translateY(0)}}
-    @keyframes glowPulse{0%,100%{text-shadow:0 0 8px rgba(200,150,255,0.6)}50%{text-shadow:0 0 14px rgba(200,150,255,1)}}
+    .frame-wrapper {
+      width:95%;max-width:900px;aspect-ratio:16/9;
+      border-radius:16px;overflow:hidden;
+      margin-top:10px;
+      background:rgba(0,0,0,0.25);backdrop-filter:blur(4px);
+      animation:fadeInUp 1.4s ease forwards;opacity:0;transform:translateY(10px);
+    }
+    .frame-wrapper iframe {width:100%;height:100%;border:none;display:block;border-radius:16px}
 
-    @media(max-width:480px){.profile-container{width:120px;height:120px}.link-bar{gap:6px}.link-bar a{padding:6px 10px}}
+    .footer {font-size:0.8rem;margin-top:18px;opacity:0.7}
+    .footer a {color:white;text-decoration:none}
+
+    .lang-switch {
+      position:fixed;top:12px;left:12px;display:flex;gap:6px;z-index:99;
+    }
+    .lang-switch button {
+      background:rgba(255,255,255,0.15);
+      color:white;border:none;padding:6px 12px;
+      border-radius:50px;cursor:pointer;font-size:0.8rem;
+      transition:all 0.3s ease;
+    }
+    .lang-switch button:hover {
+      background:rgba(255,255,255,0.3);transform:scale(1.05);
+    }
+
+    .smooth-switch {
+      animation: smoothFadeSlide 0.9s ease;
+    }
+    @keyframes smoothFadeSlide {
+      0%{opacity:1;transform:translateY(0)}
+      40%{opacity:0;transform:translateY(-15px)}
+      60%{opacity:0;transform:translateY(15px)}
+      100%{opacity:1;transform:translateY(0)}
+    }
+
+    @keyframes fadeInUp {to {opacity:1;transform:translateY(0)}}
+    @keyframes glowPulse {
+      0%,100%{text-shadow:0 0 8px rgba(200,150,255,0.6)}
+      50%{text-shadow:0 0 14px rgba(200,150,255,1)}
+    }
+
+    @media(max-width:480px){
+      .profile-container{
+        width:120px;
+        height:120px;
+      }
+      .link-bar{gap:6px}
+      .link-bar a{padding:6px 10px}
+    }
   </style>
 </head>
 <body>
   <canvas id="particles"></canvas>
 
   <div class="lang-switch">
-    <button id="btn-fa">فارسی</button>
-    <button id="btn-en">English</button>
-  </div>
-  <div class="right-buttons" id="right-buttons">
-    <button id="btn-about">درباره من</button>
-    <button id="btn-contact">تماس</button>
+    <button id="btn-fa">Fa</button>
+    <button id="btn-en">En</button>
   </div>
 
   <div class="profile-container">
     <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid slice">
-      <defs><clipPath id="circleView"><circle cx="50" cy="50" r="50"/></clipPath></defs>
+      <defs>
+        <clipPath id="circleView">
+          <circle cx="50" cy="50" r="50"/>
+        </clipPath>
+      </defs>
       <image clip-path="url(#circleView)" href="https://bayanbox.ir/view/6333081801587349279/Saeed2.jpg" width="100" height="100" preserveAspectRatio="xMidYMid slice"/>
     </svg>
   </div>
 
   <div class="title-wrapper">
     <h1 class="title-line" id="main-title">دکتر سعید مجتبی‌زاده</h1>
-    <h2 class="title-sub" id="sub-title">فوق‌دکتری مهندسی عمران-ژئوتکنیک لرزه‌ای</h2>
+    <h2 class="title-sub" id="sub-title">اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران</h2>
   </div>
 
   <div class="link-bar" id="links"></div>
 
   <div class="frame-wrapper">
-    <iframe src="https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame?autoplay=false" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    <iframe src="https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame?autoplay=false"
+      allow="autoplay; fullscreen" allowfullscreen></iframe>
   </div>
 
   <div class="footer">
-    <a href="http://www.mojtabazadeh.ir/" target="_blank" id="footer-name">سعید مجتبی زاده ©</a>
-  </div>
-
-  <!-- Modals -->
-  <div class="modal" id="about-modal">
-    <div class="modal-content">
-      <h3 id="about-title"></h3>
-      <p id="about-text"></p>
-      <button class="close-btn" onclick="closeModal('about-modal')">×</button>
-    </div>
-  </div>
-  <div class="modal" id="contact-modal">
-    <div class="modal-content">
-      <h3 id="contact-title"></h3>
-      <p id="contact-text"></p>
-      <button class="close-btn" onclick="closeModal('contact-modal')">×</button>
-    </div>
+    © <a href="http://www.mojtabazadeh.ir/" target="_blank">Saeed Mojtabazadeh | www.mojtabazadeh.ir</a>
   </div>
 
   <script defer>
     const data = {
-      fa:{
-        title:"دکتر سعید مجتبی‌زاده",
-        sub:"فوق‌دکتری مهندسی عمران-ژئوتکنیک لرزه‌ای",
-        links:[
-          {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
-          {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
-          {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},
-          {text:"اینستاگالری",href:"https://www.instagallery.ir/"},
-          {text:"پایگاه اَپرچِر",href:"http://mojtabazadeh-hasanlouei.ir/"},
-          {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-          {text:"پروفایل اُرکید",href:"https://orcid.org/0000-0001-8508-4837"},
-          {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"},
-        ],
-        aboutTitle:"درباره من",
-        about:دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود. ,
-        contactTitle:"تماس",
-        contact:ایمیل: mojtabazadeh@outlook.com<br>شماره تماس: 09334115773,
-        footer:"سعید مجتبی زاده ©",
-        btnAbout:"درباره من",
-        btnContact:"تماس"
-      },
-      en:{
-        title:"Dr. Saeed Mojtabazadeh",
-        sub:"Postdoc Fellow in Geotechnical Engineering",
-        links:[
-          {text:"Website",href:"http://mojtabazadeh.ir/"},
-          {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
-          {text:"Study Hub",href:"http://www.smojtabazadeh.ir/"},
-          {text:"Instagallery",href:"https://www.instagallery.ir/"},
-          {text:"Aperture",href:"http://mojtabazadeh-hasanlouei.ir/"},
-          {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-          {text:"ORCID",href:"https://orcid.org/0000-0001-8508-4837"},
-          {text:"English Website",href:"https://www.mojtabazade.ir/"},
-        ],
-        aboutTitle:"About Me",
-        about:Dr. Saeed Mojtabazadeh is the pioneering geotechnical engineering postdoctoral researcher in Iran, specializing in computational algorithms. Since 2016, Dr. Mojtabazadeh has been dedicated to advanced numerical modeling in seismic geomechanics. His Ph.D. thesis and postdoctoral research focus on investigating SH-wave propagation in orthotropic mediums, along with topographic features, utilizing an exclusive approach known as the Direct Half-Space Time-Domain Boundary Element Method. He has developed multiple numerical approaches, including the Boundary Element Method (BEM), Finite Element Method (FEM), and Hybrid methods, applied to seismic analysis in geotechnical engineering.,
-        contactTitle:"Contact",
-        contact:Email: mojtabazadeh@outlook.com<br>Phone: +989334115773,
-        footer:"Saeed Mojtabazadeh ©",
-        btnAbout:"About Me",
-        btnContact:"Contact"
-      }
+      fa:{title:"دکتر سعید مجتبی‌زاده",sub:"اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران",links:[
+        {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
+        {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
+        {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},
+        {text:"اینستاگالری",href:"https://www.instagallery.ir/"},
+        {text:"پایگاه اَپرچِر",href:"http://mojtabazadeh-hasanlouei.ir/"},
+        {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
+        {text:"پروفایل اورکید",href:"https://orcid.org/0000-0001-8508-4837"},
+        {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"},
+      ]},
+      en:{title:"Dr. Saeed Mojtabazadeh",sub:"Postdoc Fellow in Geotechnical Engineering",links:[
+        {text:"Website",href:"http://mojtabazadeh.ir/"},
+        {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
+        {text:"Study Hub",href:"http://www.smojtabazadeh.ir/"},
+        {text:"Instagallery",href:"https://www.instagallery.ir/"},
+        {text:"Aperture",href:"http://mojtabazadeh-hasanlouei.ir/"},
+        {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
+        {text:"ORCID",href:"https://orcid.org/0000-0001-8508-4837"},
+        {text:"English Website",href:"https://www.mojtabazade.ir/"},
+      ]}
     };
 
     const mainTitle=document.getElementById("main-title"),
           subTitle=document.getElementById("sub-title"),
-          linksContainer=document.getElementById("links"),
-          footerName=document.getElementById("footer-name"),
-          btnAbout=document.getElementById("btn-about"),
-          btnContact=document.getElementById("btn-contact"),
-          rightButtons=document.getElementById("right-buttons");
+          linksContainer=document.getElementById("links");
 
     function buildLinks(lang){
       linksContainer.innerHTML="";
@@ -228,25 +225,13 @@
       setTimeout(()=>{
         mainTitle.textContent=data[lang].title;
         subTitle.textContent=data[lang].sub;
-        footerName.textContent=data[lang].footer;
-        btnAbout.textContent=data[lang].btnAbout;
-        btnContact.textContent=data[lang].btnContact;
         buildLinks(lang);
-
         if(lang==="en"){
           document.body.classList.add("lang-en");
           document.documentElement.dir="ltr";
-          // جابه‌جایی دکمه‌ها در حالت انگلیسی
-          rightButtons.innerHTML="";
-          rightButtons.appendChild(btnContact);
-          rightButtons.appendChild(btnAbout);
         } else {
           document.body.classList.remove("lang-en");
           document.documentElement.dir="rtl";
-          // حالت فارسی به ترتیب اصلی
-          rightButtons.innerHTML="";
-          rightButtons.appendChild(btnAbout);
-          rightButtons.appendChild(btnContact);
         }
       },300);
       setTimeout(()=>document.body.classList.remove("smooth-switch"),900);
@@ -256,21 +241,6 @@
     switchLang(savedLang);
     document.getElementById("btn-fa").onclick=()=>switchLang("fa");
     document.getElementById("btn-en").onclick=()=>switchLang("en");
-
-    btnAbout.onclick=()=>{
-      const lang=localStorage.getItem("lang")||"fa";
-      document.getElementById("about-title").textContent=data[lang].aboutTitle;
-      document.getElementById("about-text").innerHTML=data[lang].about;
-      document.getElementById("about-modal").classList.add("show");
-    };
-    btnContact.onclick=()=>{
-      const lang=localStorage.getItem("lang")||"fa";
-      document.getElementById("contact-title").textContent=data[lang].contactTitle;
-      document.getElementById("contact-text").innerHTML=data[lang].contact;
-      document.getElementById("contact-modal").classList.add("show");
-    };
-
-    function closeModal(id){document.getElementById(id).classList.remove("show");}
 
     const canvas=document.getElementById("particles"),ctx=canvas.getContext("2d");
     let particles=[];
