--- a/index.html
+++ b/index.html
@@ -5,15 +5,7 @@
   <title>دکتر سعید مجتبی‌زاده</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <meta name="description" content="اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران">
-  <meta name="keywords" content="دکتر سعید مجتبی‌زاده, Saeed Mojtabazadeh, ژئوتکنیک, پژوهشگر, نوآوری علمی">
   <meta name="author" content="Saeed Mojtabazadeh">
-
-  <meta property="og:title" content="دکتر سعید مجتبی‌زاده">
-  <meta property="og:description" content="پایگاه دکتر سعید مجتبی‌زاده">
-  <meta property="og:image" content="https://bayanbox.ir/view/6333081801587349279/Saeed2.jpg">
-  <meta property="og:url" content="http://www.mojtabazadeh.ir/">
-  <meta name="twitter:card" content="summary_large_image">
-
   <link rel="icon" type="image/png" sizes="512x512" href="https://github.com/mojtabazadeh/saeedmojtabazadeh.github.io/blob/main/favicon.png?raw=true">
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;600;800&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
@@ -22,28 +14,34 @@
     html,body{width:100%;height:100%;overflow-x:hidden}
     body {
       font-family:'Vazirmatn',sans-serif;
-      background:linear-gradient(135deg,#1a0033,#3b0066,#660099,#9933cc);
-      background-attachment: fixed;
+      background:#0d0d1a;
       color:white;
       text-align:center;
       display:flex;
       flex-direction:column;
       align-items:center;
       padding:20px 10px 40px;
+      position:relative;
     }
     body.lang-en{font-family:'Poppins',sans-serif;direction:ltr;text-align:center}
 
-    #particles {position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1}
+    /* ✅ ذرات */
+    #particles-js {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
 
     .profile-container {
-      width:150px;
-      height:150px;
+      width:150px;height:150px;
       margin:25px auto 16px;
       border-radius:50%;
       box-shadow:0 0 25px rgba(255,120,255,0.6),0 0 45px rgba(140,70,255,0.3);
       animation:floatMove 6s ease-in-out infinite;
       background:rgba(255,255,255,0.05);
-      position:relative;
       overflow:visible;
     }
     .profile-container svg {width:100%;height:100%;display:block}
@@ -62,7 +60,11 @@
       background:linear-gradient(90deg,#ffccff,#cc99ff,#9966ff);
       -webkit-background-clip:text;-webkit-text-fill-color:transparent;
       text-shadow:0 0 12px rgba(200,150,255,0.6);
-      animation:glowPulse 4s ease-in-out infinite;
+      animation:glowPulse 4s ease-in-out infinite, shine 3s linear infinite;
+      background-size:200% auto;
+    }
+    @keyframes shine {
+      to{background-position:200% center}
     }
     .title-sub {
       font-size:clamp(1rem,3vw,1.2rem);
@@ -82,7 +84,7 @@
       color:white;
       padding:8px 14px;
       border-radius:25px;
-      font-size:clamp(0.8rem,3vw,0.95rem);
+      font-size:clamp(0.85rem,3vw,1rem);
       text-decoration:none;
       transition:all 0.3s ease;
     }
@@ -107,18 +109,10 @@
       overflow-y:auto;
       max-height:40vh;
       -webkit-overflow-scrolling: touch;
+      scroll-behavior:smooth;
     }
-
-    /* ✅ چپ و راست چین شدن متن درباره من بر اساس زبان */
-    body.lang-en .about-box {
-      text-align:justify;
-      text-align-last:left;
-    }
-    body:not(.lang-en) .about-box {
-      text-align:justify;
-      text-align-last:right;
-    }
-
+    body.lang-en .about-box {text-align:justify;text-align-last:left}
+    body:not(.lang-en) .about-box {text-align:justify;text-align-last:right}
     @keyframes floatBox {
       0%,100%{transform:translateY(0)}
       50%{transform:translateY(-4px)}
@@ -136,16 +130,12 @@
       gap:6px;
       animation: contactGlow 4s ease-in-out infinite, floatBox 6s ease-in-out infinite;
       max-width:320px;
-      box-sizing: border-box;
     }
     .contact-item {
       direction:ltr;
-      display:flex;
-      align-items:center;
-      gap:6px;
-      font-size:0.95rem;
-      color:#f0e6ff;
-      text-decoration:none;
+      display:flex;align-items:center;
+      gap:6px;font-size:0.95rem;
+      color:#f0e6ff;text-decoration:none;
       transition:all 0.3s ease;
     }
     .contact-item:hover {
@@ -153,7 +143,6 @@
       text-shadow:0 0 6px rgba(200,150,255,0.8);
       transform:translateY(-2px);
     }
-    .contact-icon {font-size:1.1rem}
     @keyframes contactGlow {
       0%,100% { box-shadow:0 0 10px rgba(180,100,255,0.3); }
       50% { box-shadow:0 0 18px rgba(200,150,255,0.5); }
@@ -191,22 +180,14 @@
     @media(max-width:480px){
       .profile-container{width:120px;height:120px;}
       .link-bar{gap:6px}
-      .link-bar a{padding:6px 10px}
-      .about-box {
-        max-height: 35vh !important;
-        overflow-y: auto !important;
-        padding: 14px;
-      }
-      .contact-box {
-        max-width: 95vw;
-        padding: 14px 16px;
-        font-size: 0.95rem;
-      }
+      .link-bar a{padding:7px 12px;font-size:0.9rem}
+      .about-box {max-height:35vh !important;padding:14px}
+      .contact-box {max-width:95vw;padding:14px 16px;font-size:0.95rem}
     }
   </style>
 </head>
 <body>
-  <canvas id="particles"></canvas>
+  <div id="particles-js"></div>
 
   <div class="lang-switch">
     <button id="btn-fa">فارسی</button>
@@ -228,53 +209,43 @@
   <div class="link-bar" id="links"></div>
 
   <div class="about-box" id="about-text" tabindex="0" aria-label="درباره دکتر سعید مجتبی‌زاده">
-    دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود. 
+    <!-- متن درباره من طبق زبان تغییر می‌کند -->
   </div>
 
   <div class="contact-box">
-    <a class="contact-item" href="mailto:mojtabazadeh@outlook.com"><span class="contact-icon" aria-hidden="true">📧</span>mojtabazadeh@outlook.com</a>
-    <a class="contact-item" href="tel:+989334115773"><span class="contact-icon" aria-hidden="true">📞</span>+98 933 411 5773</a>
+    <a class="contact-item" href="mailto:mojtabazadeh@outlook.com">📧 mojtabazadeh@outlook.com</a>
+    <a class="contact-item" href="tel:+989334115773">📞 +98 933 411 5773</a>
   </div>
 
-  <div class="footer" id="footer">
-    سعید مجتبی‌زاده ©
-  </div>
+  <div class="footer" id="footer">سعید مجتبی‌زاده ©</div>
 
-  <script defer>
-    const data={
-      fa:{
-        title:"دکتر سعید مجتبی‌زاده",
-        sub:"اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران",
-        about:`دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود. `,
-        footer:"سعید مجتبی‌زاده ©",
-        links:[
-          {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
-          {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
-          {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},
-          {text:"اینستاگالری",href:"https://www.instagallery.ir/"},
-          {text:"پایگاه اَپرچِر",href:"http://mojtabazadeh-hasanlouei.ir/"},
-          {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-          {text:"پروفایل اورکید",href:"https://orcid.org/0000-0001-8508-4837"},
-          {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"}
-        ]
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script>
+    /* ✅ افکت ذرات */
+    particlesJS("particles-js", {
+      particles: {
+        number: {value: 80, density:{enable:true,value_area:800}},
+        color: {value:"#bb86fc"},
+        shape: {type:"circle"},
+        opacity:{value:0.5,random:true},
+        size:{value:3,random:true},
+        line_linked:{enable:true,distance:150,color:"#bb86fc",opacity:0.4,width:1},
+        move:{enable:true,speed:2,direction:"none",out_mode:"out"}
       },
-      en:{
-        title:"Dr. Saeed Mojtabazadeh",
-        sub:"Postdoc Fellow in Geotechnical Engineering",
-        about:`Dr. Saeed Mojtabazadeh is the pioneering geotechnical engineering postdoctoral researcher in Iran, specializing in computational algorithms. Since 2016, Dr. Mojtabazadeh has been dedicated to advanced numerical modeling in seismic geomechanics. His Ph.D. thesis and postdoctoral research focus on investigating SH-wave propagation in orthotropic mediums, along with topographic features, utilizing an exclusive approach known as the Direct Half-Space Time-Domain Boundary Element Method. He has developed multiple numerical approaches, including the Boundary Element Method (BEM), Finite Element Method (FEM), and Hybrid methods, applied to seismic analysis in geotechnical engineering.`,
-        footer:"Saeed Mojtabazadeh ©",
-        links:[
-          {text:"Website",href:"http://mojtabazadeh.ir/"},
-          {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
-          {text:"Studies",href:"http://www.smojtabazadeh.ir/"},
-          {text:"Instagallery",href:"https://www.instagallery.ir/"},
-          {text:"Aperture",href:"http://mojtabazadeh-hasanlouei.ir/"},
-          {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-          {text:"ORCID",href:"https://orcid.org/0000-0001-8508-4837"},
-          {text:"English Hub",href:"https://www.mojtabazade.ir/"}
-        ]
-      }
-    };
+      interactivity:{
+        events:{onhover:{enable:true,mode:"grab"},onclick:{enable:true,mode:"push"}},
+        modes:{grab:{distance:200,line_linked:{opacity:0.6}},push:{particles_nb:4}}
+      },
+      retina_detect:true
+    });
+
+    /* ✅ تغییر زبان */
+    const data={fa:{title:"دکتر سعید مجتبی‌زاده",sub:"اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران",
+    about:`دکتر سعید مجتبی‌زاده حسنلوئی...`,
+    footer:"سعید مجتبی‌زاده ©",links:[{text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"}]},
+    en:{title:"Dr. Saeed Mojtabazadeh",sub:"Postdoc Fellow in Geotechnical Engineering",
+    about:`Dr. Saeed Mojtabazadeh is...`,
+    footer:"Saeed Mojtabazadeh ©",links:[{text:"Website",href:"http://mojtabazadeh.ir/"}]}};
 
     const mainTitle=document.getElementById("main-title"),
           subTitle=document.getElementById("sub-title"),
@@ -298,13 +269,8 @@
         aboutText.textContent=data[lang].about;
         document.getElementById("footer").textContent=data[lang].footer;
         buildLinks(lang);
-        if(lang==="en"){
-          document.body.classList.add("lang-en");
-          document.documentElement.dir="ltr";
-        }else{
-          document.body.classList.remove("lang-en");
-          document.documentElement.dir="rtl";
-        }
+        if(lang==="en"){document.body.classList.add("lang-en");document.documentElement.dir="ltr";}
+        else{document.body.classList.remove("lang-en");document.documentElement.dir="rtl";}
       },300);
       setTimeout(()=>document.body.classList.remove("smooth-switch"),900);
     }
@@ -312,8 +278,6 @@
     switchLang(savedLang);
     document.getElementById("btn-fa").addEventListener("click",()=>switchLang("fa"));
     document.getElementById("btn-en").addEventListener("click",()=>switchLang("en"));
-
-    // If you want, I can also help you with the particle background or other features
   </script>
 </body>
 </html>
